@@ -1,8 +1,6 @@
 install(FILES
-    map.png
     map.cfg
     map.lua
-    mask.png
     preview.png
     desc.txt
     DESTINATION ${SHAREPATH}Data/Maps/Basketball)
