@@ -14,6 +14,7 @@ function onGameInit()
 	Explosives = 0
 	Delay = 500
 	SuddenDeathTurns = 99999 -- "disable" sudden death
+    Map = 'BasketballField'
 end
 
 function onGameStart()
