@@ -1,0 +1,6 @@
+install(FILES
+    map.png
+    map.cfg
+    mask.png
+    preview.png
+    DESTINATION ${SHAREPATH}Data/Maps/BasketballField)
